--- a/configs/thread/thread.yaml
+++ b/configs/thread/thread.yaml
@@ -50,3 +50,9 @@ task_config:
       args: {
         temperature: 0. 
       }
+    investigator_bot:
+      name: "gpt-4o-mini-2024-07-18"
+      provider: "openai"
+      args: {
+        temperature: 0. 
+      }
