--- a/configs/thread/thread.yaml
+++ b/configs/thread/thread.yaml
@@ -17,7 +17,7 @@ task_config:
     no_actions: 3   # optimal: 2-3
     no_max_comments: 3    
     max_depth: 5  # optimal: 5-6
-    no_profiles: 10  # How many people chat in the topic
+    no_profiles: 40  # How many people chat in the topic
     p_critic: 0.4  # optimal: 0.4
     p_short: 0.7
     mode: "top" # used top mode for dataset; random is not effective
@@ -26,6 +26,7 @@ task_config:
     min_comment_len: 50
     max_comment_len: 200
     guess_feature: ["city_country", "age", "income_level", "income", "education", "occupation", "sex", "relationship_status", "birth_city_country"] # provide as a list
+    # guess_feature: ["sex", "relationship_status", "birth_city_country"] # provide as a list
     author_bot_system_prompt_path: "./data/thread/system_prompts/author_system_prompt.txt"
     user_bot_system_prompt_path: "./data/thread/system_prompts/user_system_prompt.txt"
     profile_checker_prompt_path: "./data/thread/system_prompts/profile_checker_prompt.txt"
