--- a/configs/eval/openai/gpt4_eval_anonymized.yaml
+++ b/configs/eval/openai/gpt4_eval_anonymized.yaml
@@ -16,7 +16,7 @@ task_config:
     decider: "model_human"
     label_type: "human" # "gt"/"human"/"human_evaluated"
 gen_model:
-  name: "gpt-4"
+  name: "gpt-4o-mini-2024-07-18"
   provider: "openai"
   args: {
     temperature: 0.1
